--- a/css/forca.css
+++ b/css/forca.css
@@ -8,7 +8,7 @@ body{
     width: 100vw;
     height: 90vw;
     margin-top: 10px;
-    background-color: #4682B4;
+    background-image:url(../img/fundo.jpg);
     font-family:'Ubuntu', sans-serif ;
 }
 .container{
